--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <span id="file-name" class="file-name">No file chosen</span>
             </div>
             <div class="form-group">
-                <label for="city-input" class="city-label">City Name :</label>
-                <input type="text" id="city-input" class="city-input" placeholder="City Name">
+                <label for="city-input" class="city-label">Location</label>
+                <input type="text" id="city-input" class="city-input" placeholder="Location">
             </div>
             <button id="save-button">Upload File</button>
         </form>
@@ -32,7 +32,7 @@
                 <thead>
                     <tr>
                         <th>Client Name</th>
-                        <th>City Name</th>
+                        <th>Location</th>
                         <th>PDF View</th>
                         <th>Delete</th>
                     </tr>
