--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDF File Management</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/images/ITL Logo.jpg">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 </head>
 <body>
     <div class="container">
         <h1>File Management System</h1>
-        <p class="welcome">Welcome! Upload your PDF files, and you can save, view, and delete them easily.</p>
+        <p class="welcome"c>Welcome! Upload your PDF files, and you can save, view, and delete them easily.</p>
         
         <form id="file-form">
             <label for="file-input" class="file-label">Choose File</label>
